# Stellar-forge

./: .gitignore  .lintstagedrc.js  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES_587_590.md  IMPLEMENTATION_SUMMARY.md  Implementmintui  NETWORK_SWITCHING_EXAMPLES.md  NETWORK_SWITCHING_GUIDE.md  NETWORK_SWITCHING_IMPLEMENTATION.md  README.md  SECURITY.md  UIdesign  Uiaddmodalbase  Uitokencreation  docker-compose.e2e.yml  package-lock.json  package.json
contracts/token-factory/: Cargo.toml  build.sh  clippy.toml
contracts/token-factory/fuzz/: .gitignore  Cargo.toml  README.md
contracts/token-factory/fuzz/fuzz_targets/: fuzz_burn.rs  fuzz_create_token.rs  fuzz_fee_arithmetic.rs
contracts/token-factory/src/: lib.rs  test.rs
contracts/token-factory/test_snapshots/test/: test_admin_can_pause.1.json  test_admin_can_pause_and_unpause.1.json  test_admin_can_transfer_ownership.1.json  test_admin_can_unpause.1.json  test_burn.1.json  test_burn_disabled_returns_error.1.json  test_burn_invalid_amount.1.json  test_burn_not_blocked_when_paused.1.json  test_create_token.1.json  test_create_token_accepts_decimals_18.1.json  test_create_token_blocked_when_paused.1.json  test_create_token_insufficient_fee.1.json  test_create_token_rejects_decimals_19.1.json  test_create_token_rejects_empty_name.1.json  test_create_token_rejects_empty_symbol.1.json  test_create_token_rejects_negative_supply.1.json  test_create_token_works_after_unpause.1.json  test_get_token_info.1.json  test_get_token_info_not_found.1.json  test_initialize.1.json  (+28 more)
(+211 files in other folders)
