[package]
name = "token-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.0.0"
soroban-token-sdk = { version = "25.0.0" }

[dev-dependencies]
soroban-sdk = { version = "25.0.0", features = ["testutils"] }
proptest = "1"

[features]
testutils = ["soroban-sdk/testutils"]